// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Card Check snapshots should renders correctly with different card style 1`] = `
<div
  className="consonant-card"
  id="6d6438c8-1"
>
  <div
    className="consonant-card--img"
    style={
      Object {
        "backgroundImage": "url(\\"https://caas-chimera.s3-us-west-1.amazonaws.com/sample.jpg\\")",
      }
    }
  >
    <span
      className="consonant-card--banner"
      style={
        Object {
          "backgroundColor": "#CB6F10",
          "color": "#FFFFFF",
        }
      }
    >
      <img
        alt=""
        className="consonant-card--banner-icon"
        loading="lazy"
        src="some-banner-icon"
        width="8"
      />
      Some Banner Description
    </span>
    <span
      className="consonant-card--video-ico"
    />
  </div>
  <div
    className="consonant-card--inner"
  >
    <span
      className="consonant-card--label"
    >
      Some label
    </span>
    <h2
      className="consonant-card--title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Title 1 ",
        }
      }
    />
    <p
      className="consonant-card--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Description",
        }
      }
    />
    <div
      className="consonant-card--footer-wrapper"
    >
      <div
        className="consonant-card--footer-info"
      >
        <button
          className="consonant-card--footer-btn"
          data-tooltip-wrapper={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="consonant-card--bookmark-ico"
          />
          <span
            className="consonant-tooltip"
          >
            Save breakout session
          </span>
        </button>
        <span
          className="consonant-card--secondary-text"
        >
          Some secondary text
        </span>
      </div>
      <a
        className="consonant-card--btn"
        href="https://google.com"
        rel="noreferrer"
        target="_blank"
      >
        Some CTA
      </a>
    </div>
  </div>
</div>
`;

exports[`Consonant/Card Check snapshots should renders correctly with different card style 2`] = `
<div
  className="consonant-card consonant-card_square"
  id="6d6438c8-1"
>
  <div
    className="consonant-card--img"
    style={
      Object {
        "backgroundImage": "url(\\"https://caas-chimera.s3-us-west-1.amazonaws.com/sample.jpg\\")",
      }
    }
  >
    <span
      className="consonant-card--banner"
      style={
        Object {
          "backgroundColor": "#CB6F10",
          "color": "#FFFFFF",
        }
      }
    >
      <img
        alt=""
        className="consonant-card--banner-icon"
        loading="lazy"
        src="some-banner-icon"
        width="8"
      />
      Some Banner Description
    </span>
    <span
      className="consonant-card--video-ico"
    />
  </div>
  <div
    className="consonant-card--inner"
  >
    <span
      className="consonant-card--label"
    >
      Some label
    </span>
    <h2
      className="consonant-card--title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Title 1 ",
        }
      }
    />
  </div>
</div>
`;

exports[`Consonant/Card Check snapshots should renders correctly with different card style 3`] = `
<div
  className="consonant-card"
  id="6d6438c8-1"
>
  <div
    className="consonant-card--img"
    style={
      Object {
        "backgroundImage": "url(\\"https://caas-chimera.s3-us-west-1.amazonaws.com/sample.jpg\\")",
      }
    }
  >
    <span
      className="consonant-card--banner"
      style={
        Object {
          "backgroundColor": "#CB6F10",
          "color": "#FFFFFF",
        }
      }
    >
      <img
        alt=""
        className="consonant-card--banner-icon"
        loading="lazy"
        src="some-banner-icon"
        width="8"
      />
      Some Banner Description
    </span>
    <span
      className="consonant-card--video-ico"
    />
  </div>
  <div
    className="consonant-card--inner"
  >
    <span
      className="consonant-card--label"
    >
      Some label
    </span>
    <h2
      className="consonant-card--title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Title 1 ",
        }
      }
    />
    <p
      className="consonant-card--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Description",
        }
      }
    />
    <div
      className="consonant-card--footer-wrapper"
    >
      <div
        className="consonant-card--footer-info"
      >
        <button
          className="consonant-card--footer-btn"
          data-tooltip-wrapper={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="consonant-card--bookmark-ico"
          />
          <span
            className="consonant-tooltip"
          >
            Save breakout session
          </span>
        </button>
        <span
          className="consonant-card--secondary-text"
        >
          Some secondary text
        </span>
      </div>
      <a
        className="consonant-card--btn"
        href="https://google.com"
        rel="noreferrer"
        target="_blank"
      >
        Some CTA
      </a>
    </div>
  </div>
</div>
`;

exports[`Consonant/Card Check snapshots should renders correctly with different card style 4`] = `
<div
  className="consonant-card consonant-card_full"
  id="6d6438c8-1"
>
  <div
    className="consonant-card--img"
    style={
      Object {
        "backgroundImage": "url(\\"https://caas-chimera.s3-us-west-1.amazonaws.com/sample.jpg\\")",
      }
    }
  >
    <span
      className="consonant-card--banner"
      style={
        Object {
          "backgroundColor": "#CB6F10",
          "color": "#FFFFFF",
        }
      }
    >
      <img
        alt=""
        className="consonant-card--banner-icon"
        loading="lazy"
        src="some-banner-icon"
        width="8"
      />
      Some Banner Description
    </span>
    <span
      className="consonant-card--video-ico"
    />
  </div>
  <div
    className="consonant-card--inner"
  >
    <span
      className="consonant-card--label"
    >
      Some label
    </span>
    <h2
      className="consonant-card--title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Title 1 ",
        }
      }
    />
  </div>
</div>
`;

exports[`Consonant/Card Check snapshots should renders with bookmarking 1`] = `
<div
  className="consonant-card"
  id="6d6438c8-1"
>
  <div
    className="consonant-card--img"
    style={
      Object {
        "backgroundImage": "url(\\"https://caas-chimera.s3-us-west-1.amazonaws.com/sample.jpg\\")",
      }
    }
  >
    <span
      className="consonant-card--banner"
      style={
        Object {
          "backgroundColor": "#CB6F10",
          "color": "#FFFFFF",
        }
      }
    >
      <img
        alt=""
        className="consonant-card--banner-icon"
        loading="lazy"
        src="some-banner-icon"
        width="8"
      />
      Some Banner Description
    </span>
    <span
      className="consonant-card--video-ico"
    />
  </div>
  <div
    className="consonant-card--inner"
  >
    <span
      className="consonant-card--label"
    >
      Some label
    </span>
    <h2
      className="consonant-card--title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Title 1 ",
        }
      }
    />
    <p
      className="consonant-card--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some Description",
        }
      }
    />
    <div
      className="consonant-card--footer-wrapper"
    >
      <div
        className="consonant-card--footer-info"
      >
        <button
          className="consonant-card--footer-btn consonant-card--footer-btn_active consonant-card--footer-btn_disabled"
          data-tooltip-wrapper={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="consonant-card--bookmark-ico"
            style={
              Object {
                "backgroundImage": "url(https://upload.wikimedia.org/wikipedia/commons/a/a0/Ukrposhta-ua-icon.svg)",
              }
            }
          />
          <span
            className="consonant-tooltip"
          >
            Unsave breakout session
          </span>
        </button>
        <span
          className="consonant-card--secondary-text"
        >
          Some secondary text
        </span>
      </div>
      <a
        className="consonant-card--btn"
        href="https://google.com"
        rel="noreferrer"
        target="_blank"
      >
        Some CTA
      </a>
    </div>
  </div>
</div>
`;
